--- a/index.html
+++ b/index.html
@@ -7,24 +7,10 @@
     <title>Smart Mirror with Dashboard Widgets</title>
 
     <!-- Favicons -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicons/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicons/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="" href="C:\Users\Eric Zito\Dropbox\PC (2)\Desktop\dashboard-widgets-smart-mirror\favicons">
 
     <!-- Normalize CSS Base -->
     <link
@@ -42,7 +28,7 @@
     <main class="layout">
       <!-- Time -->
       <section class="time">
-        <h1>Time</h1>
+        <h1><!--Time--></h1>
         <time>
           <data class="hours">HH</data> : <data class="minutes">MM</data> :
           <data class="seconds">SS</data>
@@ -52,13 +38,20 @@
 
       <!--  Date -->
       <section class="date">
-        <h1>Date</h1>
+        <h1><!--Date--></h1>
         <time>
           <data class="month">Month</data>
           <data class="dayOfMonth">00</data>, <data class="year">0000</data> -
           <data class="dayOfWeek">SMTWTFS</data>
         </time>
       </section>
+<!--Video-->
+
+
+<video autoplay></video>
+
+<h1 class="title">Smert Mirror</h1>
+
 
       <!-- Weather -->
       <section class="weather">
