--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Mirror with Dashboard Widgets</title>
 
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="" href="C:\Users\Eric Zito\Dropbox\PC (2)\Desktop\dashboard-widgets-smart-mirror\favicons">
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
 
     <!-- Normalize CSS Base -->
     <link
